@@ -1,6 +1,7 @@
 ncmpc 0.45 - not yet released
 * make "tagtypes" errors non-fatal
 * check which tag types are supported by MPD (fixes MPD 0.21 support)
+* lyrics: update page title after loading has finished
 * lyrics: fix path injection bug
 * lyrics: load cached lyrics without plugin
 * lyrics: use $XDG_CACHE_HOME/ncmpc/lyrics instead of ~/.lyrics
